fix: Update text visibility

--- a/src/css/body.css
+++ b/src/css/body.css
@@ -3,3 +3,8 @@
     display: flex;
   }
 }
+
+body {
+  text-rendering: optimizeLegibility;
+}
+
